# shadowmourne

./: .gitignore  AGENTS.md  README.md  gradle.properties  plan.md  settings.gradle.kts  summarize.sh
.github/workflows/: android-ci.yml
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: glaive_core.c
app/src/main/java/com/mewmix/glaive/: MainActivity.kt
app/src/main/java/com/mewmix/glaive/bridge/: BridgeActivity.kt
app/src/main/java/com/mewmix/glaive/core/: ArchiveUtils.kt  DebugLogger.kt  FavoritesManager.kt  FileOperations.kt  GlaiveCursor.kt  NativeCore.kt  RecycleBinManager.kt
app/src/main/java/com/mewmix/glaive/data/: GlaiveItem.kt
app/src/main/java/com/mewmix/glaive/ui/: ColorPicker.kt  DebugLogDialog.kt  GlaiveScreen.kt  GoogleFontsProvider.kt  ThemeManager.kt  ThemeSettings.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  font_certs.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
app/src/test/java/com/mewmix/glaive/core/: ArchiveUtilsTest.kt  FileOperationsTest.kt
docs/: NABU_BRIDGE_INTEGRATION.md
